2003-02-11  Dale Johannesen  <dalej@apple.com>
	* ra-build.c (compare_and_free_webs):  Relax checking.
	* config/rs6000/darwin.h (HOT_TEXT_SECTION_NAME):  Define.
	(UNLIKELY_EXECUTED_TEXT_SECTION_NAME):  Define.

2003-02-11  Falk Hueffner  <falk.hueffner@student.uni-tuebingen.de>

	PR optimization/9651
	* rtlanal.c (may_trap_p): Handle FIX.

2003-02-11  Dave Jones <davej@codemonkey.org.uk>

	* config/i386/i386.c (override_options): Define c3-2 as a 686 with SSE.
	* doc/invoke.texi: Extra alias.

2003-02-11  Geoffrey Keating  <geoffk@apple.com>

	* config/rs6000/host-darwin.c: Fix comment.

2003-02-11  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/rs6000.md (divmodsi4): Use register_operand
	predicate for mod result.

Tue Feb 11 20:44:45 CET 2003  Jan Hubicka  <jh@suse.cz>

	* emit-rtl.c (emit_copy_of_insn_after): Copy insn recog cache too.

2003-02-11  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.c (ix86_expand_movstr): Fail if esi or edi
	appropriated as globals.
	(ix86_expand_clrstr): Similarly.
	* config/i386/i386.md (cmpstrsi): Similarly.

2003-02-11  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.md (a peephole2): Add a case of 255.

2003-02-11  Roger Sayle  <roger@eyesopen.com>

	* optabs.h (enum optab_index): Add new OTI_pow and OTI_atan2.
	(pow_optab, atan2_optab): Define corresponding macros.
	* optabs.c (init_optabs): Initialize pow_optab and atan2_optab.
	* genopinit.c (optabs): Implement pow_optab and atan2_optab
	using pow?f3 and atan2?f3 patterns.
	* builtins.c (expand_errno_check): New function to update errno
	if necessary, split out from expand_builtin_mathfn.
	(expand_builtin_mathfn): Use expand_errno_check.
	(expand_builtin_mathfn_2): New function to handle expanding binary
	math functions, reusing the code in expand_errno_check.
	(expand_builtin): Handle the pow and atan2 math built-ins,
	BUILT_IN_{POW,POWF,POWL,ATAN2,ATAN2F,ATAN2L} via the new function
	expand_builtin_mathfn_2.
